--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,63 +1,51 @@
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.test.classpath=\
-    ${run.test.classpath}
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/movie_review.jar
-dist.javadoc.dir=${dist.dir}/javadoc
+#Mon Aug 24 11:24:09 IST 2020
+javadoc.encoding=${source.encoding}
 excludes=
-file.reference.sqlite-jdbc-3.30.1.jar=..\\..\\..\\..\\..\\sqllite\\java\\connect\\sqlite-jdbc-3.30.1.jar
-includes=**
-jar.compress=false
-javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.30.1.jar}
-# Space-separated list of extra javac options
-javac.compilerargs=
-javac.deprecation=false
-javac.source=1.5
-javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+run.classpath=${javac.classpath}\:${build.classes.dir}
+javac.classpath=${file.reference.sqlite-jdbc-3.30.1.jar}
+dist.javadoc.dir=${dist.dir}/javadoc
+build.classes.excludes=**/*.java,**/*.form
+dist.jar=${dist.dir}/movie_review.jar
+test.src.dir=test
+build.classes.dir=${build.dir}/classes
+file.reference.sqlite-jdbc-3.30.1.jar=..\\..\\..\\..\\..\\sqllite\\java\\connect\\sqlite-jdbc-3.30.1.jar
+build.test.classes.dir=${build.dir}/test/classes
+javadoc.windowtitle=
+build.test.results.dir=${build.dir}/test/results
+build.sysclasspath=ignore
+javac.compilerargs=
 javadoc.noindex=false
+dist.dir=dist
+javadoc.private=false
+build.dir=build
+javadoc.author=false
+main.class=title
+junit.selected.version=4
+build.generated.dir=${build.dir}/generated
+javadoc.version=false
+source.encoding=UTF-8
+javac.source=1.5
+includes=**
+javadoc.use=true
+jar.compress=false
 javadoc.nonavbar=false
 javadoc.notree=false
-javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
-main.class=title
+debug.test.classpath=${run.test.classpath}
+javac.deprecation=false
+javac.target=1.5
+javadoc.additionalparam=
+platform.active=default_platform
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
-# or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-source.encoding=UTF-8
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+build.generated.sources.dir=${build.dir}/generated-sources
+javadoc.splitindex=true
 src.dir=src
-test.src.dir=test
+debug.classpath=${run.classpath}
+run.jvmargs=
